Update Coffee Shop in Toronto .ipynb

--- a/Coffee Shop in Toronto .ipynb
+++ b/Coffee Shop in Toronto .ipynb
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Web scrapping population and density data "
+    "### Web scraping population and density data "
    ]
   },
   {
